--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
     "@deer-inc/cropper": "0.0.9",
+    "angular-mgl-timeline": "^0.3.3",
     "croppie": "^2.6.5",
     "firebase": "^7.13.1",
     "ngx-swiper-wrapper": "^8.0.2",
