feat(package): aos追加

--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,11 @@
             "tsConfig": "tsconfig.app.json",
             "aot": true,
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/styles.scss", "node_modules/croppie/croppie.css"],
+            "styles": [
+              "src/styles.scss",
+              "node_modules/croppie/croppie.css",
+              "node_modules/aos/dist/aos.css"
+            ],
             "scripts": [],
             "stylePreprocessorOptions": {
               "includePaths": ["src/scss"]
