--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/router": "~10.2.0",
     "@deer-inc/cropper": "0.0.9",
     "angular-mgl-timeline": "^0.3.3",
+    "aos": "^2.3.4",
     "croppie": "^2.6.5",
     "firebase": "^7.13.1",
     "ngx-swiper-wrapper": "^8.0.2",
